--- a/phone-cave/server/package.json
+++ b/phone-cave/server/package.json
@@ -14,7 +14,9 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "mongoose": "^7.2.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react-router": "^6.15.0",
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
